feat(MA-29): add button to get Risk Profile on patient page ; add risk to gateway
